# ADO-MCP

./: .gitignore  CLAUDE.md  FUTURE_ENHANCEMENTS.md  README.md  pyproject.toml
src/ado_mcp/: __init__.py  ado_client.py  server.py
